# predict-kleb-by-bacformer

./: .cruft.json  .gitignore  .venv  LICENSE  README.md  bacformer_embed_22105528.err  bacformer_embed_22105528.out  bacformer_embed_22115936.err  bacformer_embed_22115936.out  bacformer_embed_22120050.err  bacformer_embed_22120050.out  env.yml  protein_seqs_22115779.err  protein_seqs_22115779.out  protein_seqs_22120018.err  protein_seqs_22120018.out  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release.yaml
docs/: amr_prediction.md  api.md  bacformer-pr-add-large-trainer.md  blood_prediction.md  conf.py  esmc_embeddings.md  index.md  isambard_storage_notes.md  isolation_source_prediction.md  view_parquet.ipynb
docs/notebooks/: amr_ebi_records.ipynb  example.ipynb  klebsiella_baco_pangenome.ipynb  klebsiella_bacotype.ipynb  klebsiella_ebi_amr_records.ipynb  metadata.ipynb  metadata_panaroo_runs.ipynb  pangenome_by_bacformer.ipynb
docs/notebooks/pangenome/: intra_genome.ipynb  intra_genome_clonalgroup.ipynb  intra_genome_sublineages.ipynb  klebsiella_bacotype.ipynb  panaroo_GPA_per_CG.ipynb  panaroo_SVs_per_CG.ipynb  pangenome_by_bacformer.ipynb  pangenome_per_strain.ipynb
slurm_scripts/: add_paths_gff_fna_to_metadata.sh  collect_bakrep_samples.py  collect_ncbi_datasets_samples.py  count_gff_features.sh  cpu_slurm.sh  download_bakrep.sh  download_ncbi_datasets.sh  flatten_klebsiella_gff3.py  flatten_ncbi_gff3.py  generate_panaroo_ref_tsv_lists.sh  gpa_distances_batch_runs.sh  gpa_distances_single_run.sh  jaccard_clustering.sh  panaroo_jaccard_clustering.sh  panaroo_reference_genomes.sh  panaroo_reference_genomes_batch.sh  panaroo_run_strain.sh  panaroo_run_strain_metadata_array.sh  panaroo_run_strain_split.sh  pangenome_merge_run.sh  prepare_iso_source_data_for_training.sh  preprocess_protein_sequences.sh  run_bacformer_embeddings.sh  run_bacformer_embeddings_array.sh  run_genome_embeddings.sh  run_genome_mapping_test.sh  test_gpa_csv_load.sh  test_import_timing.sh  train_isolation_source.sh  train_on_slurm_amr.sh  train_on_slurm_blood_infxn.sh  train_on_slurm_finetune.sh  train_on_slurm_finetune_from_parquet.sh  train_on_slurm_finetune_from_pt.sh
src/bacotype/: __init__.py  data_paths.py
src/bacotype/pp/: add_bakta_gbff_downloaded_flag.py  add_paths_gff_fna_to_metadata.py  add_poppunk_clusters_to_metadata.py  convert_ast_data.py  count_gff_features.py  create_genome_to_parquet_file_mapping.py  download_bakrep_gbff_files.py  extract_anndata_with_bacformer_protein_embeddings.py  generate_bacformer_embeddings.py  generate_protein_sequences.py  genome_assemblies_from_bacformer_embeddings.py  merge_gff_feature_counts_into_metadata.py  mgefinder.end2end.snakefile  mgefinder.end2end.snakefile.smk  panaroo_metadata_batching.py  panaroo_run_strain.py  prepare_esmc_embeddings_and_labels_to_finetune_amr.py  prepare_esmc_embeddings_and_labels_to_finetune_isolation_source.py  prepare_klebsiella_ast_splits.py  prepare_klebsiella_ast_splits_as_pt.py  preprocess_assemblies_to_protein_sequences.py  preprocess_ebi_amr_records.py  process_klebsiella_ast.py  prune_ast_by_missing_embeddings.py  run_fastq_download.py  run_mgefinder.py  select_genomes_reference_comparison.py  stratified_isolation_source_sampling.py  stratify_faeces_blood_sampling.py  update_biosample_accessions.py
src/bacotype/pp/pp_batch_scripts/: download_bakrep.sh  install_mgefinder_v2.sh  preprocess_protein_sequences.sh  run_bacformer_embeddings_array.sh  run_fastq_download.sh  run_genome_embeddings.sh  run_genome_mapping.sh  run_mgefinder.sh
src/bacotype/sh/: download_bakrep.sh  run_bacformer_embeddings.sh  run_protein_sequences.sh
src/bacotype/tl/: __init__.py  gpa_distances_batch_runs.py  gpa_distances_single_group.py  gpa_distances_single_run.py  gpa_matrix_utils.py  metadata_analysis.py  panaroo_GPA_batch_runner.py  panaroo_GPA_reference_genome.py  panaroo_gpa_by_sv_clusters.py  panaroo_jaccard_clustering.py  panaroo_jaccard_medoid_metrics.py  panaroo_structural_variants.py  stratified_isolation_source_sampling.py  train_amr copy.py  train_amr.py  train_amr_from_pt.py
src/bacotype/tl/_depreciated/: panaroo_gpa_by_sv_clusters.py  panaroo_jaccard_clustering.py
src/predict_kleb_by_bacformer/: __init__.py
src/predict_kleb_by_bacformer/pp/: add_bakta_gbff_downloaded_flag.py  add_paths_gff_fna_to_metadata.py  convert_ast_data.py  download_bakrep_gbff_files.py  explore_parquet_structure.py  extract_anndata_with_bacformer_protein_embeddings.py  filter_esmc_embeddings_by_klebsiella.py  generate_bacformer_embeddings.py  isolation_source_cli_parsing.py  prepare_esmc_embeddings_and_labels_to_finetune_amr.py  prepare_esmc_embeddings_and_labels_to_finetune_isolation_source.py  preprocess_assemblies_to_protein_sequences.py  preprocess_ebi_amr_records.py  stratified_isolation_source_sampling.py
src/predict_kleb_by_bacformer/tl/: train_blood_infx.py  train_isolation_source.py
tests/: gpa_distances_single_run.sh  test_basic.py  test_gpa_csv_load_standalone.py  test_import_timing_standalone.py  test_pt_training_pipeline.py
