[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "Bacotype"
version = "0.0.1"
description = "Use bacformer to define predict_kleb_by_bacformers to create embeddings of whole genomes, both core and accessory, and understand population structure from perspective of all genes in genomes"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "David Abelson", email = "dca36@cam.ac.uk" },
]
authors = [
  { name = "David Abelson" },
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "accelerate>=0.28.0",
  "adjusttext>=1.3.0",
  "anndata",
  # Use local editable Bacformer checkout during PR development
  "bacformer",
  "biopython>=1.83",
  "blitzgsea>=1.3.54",
  "cudf-cu12>=25.10.0",
  "cugraph-cu12>=25.10.1",
  "cuml-cu12>=25.10.0",
  "dataclasses>=0.6",
  "dataclasses-json>=0.6.1",
  "datasets>=2.18.0",
  "gffutils>=0.13",
  "igraph>=0.11.8",
  "ipykernel>=6.30.1",
  "ipywidgets>=8.1.8",
  "leidenalg>=0.10.2",
  "muon>=0.1.7",
  "pandas>=2.2.3",
  "pyarrow>=19.0.1",
  "pysymlog>=1.0.1",
  "rapids-singlecell>=0.13.1",
  "scanpy>=1.11.1",
  "seaborn>=0.13.2",
  # for debug logging (referenced from the issue template)
  "session-info",
  "tensorboardX>=2.6.2",
  "torch>=2.5.1",
  "torchmetrics>=1.7.1",
  "transformers>=4.38.2,<5.0.0",
  "typed-argument-parser>=1.8.1",
]
# https://docs.pypi.org/project_metadata/#project-urls
urls.Documentation = "https://Bacotype.readthedocs.io/"
urls.Homepage = "https://github.com/abelsond-cam/Bacotype"
urls.Source = "https://github.com/abelsond-cam/Bacotype"

[dependency-groups]
dev = [
  "pre-commit",
  "twine>=4.0.2",
]
test = [
  "coverage>=7.10",
  "pytest",
  "pytest-cov",     # For VS Code’s coverage functionality
]
doc = [
  "docutils>=0.8,!=0.18.*,!=0.19.*",
  "ipykernel",
  "ipython",
  "myst-nb",
  "sphinx>=4",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme>=1.0.0",
  "sphinx-copybutton",
  "sphinxcontrib-bibtex>=1.0.0",
  "sphinxext-opengraph",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
bacformer = { path = "../Bacformer", editable = true }

[tool.hatch.envs.default]
installer = "uv"
dependency-groups = [ "dev" ]

[tool.hatch.envs.docs]
dependency-groups = [ "doc" ]
scripts.build = "sphinx-build -M html docs docs/_build -W {args}"
scripts.open = "python -m webbrowser -t docs/_build/html/index.html"
scripts.clean = "git clean -fdX -- {args:docs}"

# Test the lowest and highest supported Python versions with normal deps
[[tool.hatch.envs.hatch-test.matrix]]
deps = [ "stable" ]
python = [ "3.10", "3.14" ]

# Test the newest supported Python version also with pre-release deps
[[tool.hatch.envs.hatch-test.matrix]]
deps = [ "pre" ]
python = [ "3.14" ]

[tool.hatch.envs.hatch-test]
dependency-groups = [ "dev", "test" ]

[tool.hatch.envs.hatch-test.overrides]
# If the matrix variable `deps` is set to "pre",
# set the environment variable `UV_PRERELEASE` to "allow".
matrix.deps.env-vars = [
  { key = "UV_PRERELEASE", value = "allow", if = [ "pre" ] },
]

[tool.ruff]
line-length = 120
src = [ "src" ]
extend-include = [ "*.ipynb" ]

format.docstring-code-format = true

lint.select = [
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "D",      # pydocstyle
  "E",      # Error detected by Pycodestyle
  "F",      # Errors detected by Pyflakes
  "I",      # isort
  "RUF100", # Report unused noqa directives
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # Warning detected by Pycodestyle
]
lint.ignore = [
  "B008", # Errors from function calls in argument defaults. These are fine when the result is immutable.
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D105", # __magic__ methods are often self-explanatory, allow missing docstrings
  "D107", # Missing docstring in __init__
  # Disable one in each pair of mutually incompatible rules
  "D203", # We don’t want a blank line before a class docstring
  "D213", # <> We want docstrings to start immediately after the opening triple quote
  "D400", # first line should end with a period [Bug: doesn’t work with single-line docstrings]
  "D401", # First line should be in imperative mood; try rephrasing
  "E501", # line too long -> we accept long comment lines; formatter gets rid of long code lines
  "E731", # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
  "E741", # allow I, O, l as variable names -> I is the identity matrix
]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."docs/*" = [ "I" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.pydocstyle.convention = "numpy"

[tool.pytest]
strict = true
testpaths = [ "tests" ]
addopts = [
  "--import-mode=importlib", # allow using test files with same name
]

[tool.coverage.run]
source = [ "predict_kleb_by_bacformer" ]
patch = [ "subprocess" ]
omit = [
  "**/test_*.py",
]

[tool.cruft]
skip = [
  "tests",
  "src/**/__init__.py",
  "src/**/basic.py",
  "docs/api.md",
  "docs/changelog.md",
  "docs/references.bib",
  "docs/references.md",
  "docs/notebooks/example.ipynb",
]
